brave-goat-7k5w89-dev-ed.my.salesforce.com/force-app/main/default/objects/Round__c/Round__c.object-meta.xml
<CustomObject>
    <description>Tabela de descrição dos jogos</description>
    <label>Round</label>
    <nameField>
        <label>Nome de Round</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rounds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>