brave-goat-7k5w89-dev-ed.my.salesforce.com/force-app/main/default/objects/Round__c/fields/Fim_Round__c.field-meta.xml
<CustomField>
    <fullName>Fim_Round__c</fullName>
    <label>Fim Round</label>
    <type>Date</type>
</CustomField>