brave-goat-7k5w89-dev-ed.my.salesforce.com/force-app/main/default/objects/Round__c/fields/Inicio_Round__c.field-meta.xml
<CustomField>
    <fullName>Inicio_Round__c</fullName>
    <label>Inicio Round</label>
    <type>Date</type>
</CustomField>