brave-goat-7k5w89-dev-ed.my.salesforce.com/force-app/main/default/objects/Round__c/fields/Numero_do_Round__c.field-meta.xml
<CustomField>
    <fullName>Numero_do_Round__c</fullName>
    <displayFormat>Round - {000}</displayFormat>
    <label>Número do Round</label>
    <type>AutoNumber</type>
</CustomField>