brave-goat-7k5w89-dev-ed.my.salesforce.com/force-app/main/default/objects/Round__c/fields/Premio__c.field-meta.xml
<CustomField>
    <fullName>Premio__c</fullName>
    <formula>5000 *  Total_Eliminados__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prêmio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>