brave-goat-7k5w89-dev-ed.my.salesforce.com/force-app/main/default/objects/Round__c/fields/Total_Eliminados__c.field-meta.xml
<CustomField>
    <fullName>Total_Eliminados__c</fullName>
    <label>Total Eliminados</label>
    <summaryFilterItems>
        <field>Jogador__c.Eliminado__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Jogador__c.Round__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>