brave-goat-7k5w89-dev-ed.my.salesforce.com/force-app/main/default/objects/Round__c/fields/Vencedor__c.field-meta.xml
<CustomField>
    <fullName>Vencedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vencedor</label>
    <referenceTo>Jogador__c</referenceTo>
    <relationshipLabel>Rounds</relationshipLabel>
    <relationshipName>Rounds</relationshipName>
    <type>Lookup</type>
</CustomField>